example code for chapter 4

--- a/build.gradle
+++ b/build.gradle
@@ -18,11 +18,11 @@ plugins {
 mainClassName = 'App'
 
 dependencies {
-    // This dependency is found on compile classpath of this component and consumers.
+
     compile 'com.google.guava:guava:23.0'
 
-    // Use JUnit test framework
     testCompile 'junit:junit:4.12'
+    testCompile 'com.google.guava:guava-testlib:23.0'
 }
 
 // In this section you declare where to find the dependencies of your project
