Update the schedule Chapter 5, Generics WIP

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ mainClassName = 'App'
 dependencies {
 
     compile 'com.google.guava:guava:23.0'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
     testCompile 'junit:junit:4.12'
     testCompile 'com.google.guava:guava-testlib:23.0'
